// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for <InputSearch /> should match loading SnapShot 1`] = `
<SearchInput
  id="1"
  isLoading={true}
  name="test"
>
  <Input
    ariaDescribedBy={null}
    ariaLabel={null}
    className=""
    clear={false}
    clearAriaLabel={null}
    containerSize=""
    defaultValue=""
    disabled={false}
    helpText=""
    htmlId={null}
    id="1"
    inputAfter={null}
    inputBefore={
      <Spinner
        className=""
        color="black"
        percentage={null}
        showCheck={false}
        showPercentage={false}
        size={20}
      />
    }
    inputClassName=""
    inputRef={null}
    inputSize=""
    isFilled={false}
    label=""
    messageArr={[]}
    multiline={false}
    name="test"
    nestedLevel={0}
    onChange={null}
    onDoneEditing={null}
    onFocus={null}
    onKeyDown={null}
    onMouseDown={null}
    placeholder=""
    readOnly={false}
    secondaryLabel=""
    shape=""
    type="text"
    value=""
  >
    <div
      className="md-input-container"
    >
      <div
        className="md-input__wrapper"
      >
        <InputSection
          className=""
          position="before"
        >
          <span
            className="md-input__before"
          >
            <Spinner
              className=""
              color="black"
              percentage={null}
              showCheck={false}
              showPercentage={false}
              size={20}
            >
              <i
                className="md-spinner md-spinner--20 md-spinner--black"
              />
            </Spinner>
          </span>
        </InputSection>
        <input
          className="md-input md-input--before"
          id="1"
          name="test"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
    </div>
  </Input>
</SearchInput>
`;

exports[`tests for <InputSearch /> should match normal SnapShot 1`] = `
<SearchInput
  id="1"
  isLoading={false}
  name="test"
>
  <Input
    ariaDescribedBy={null}
    ariaLabel={null}
    className=""
    clear={false}
    clearAriaLabel={null}
    containerSize=""
    defaultValue=""
    disabled={false}
    helpText=""
    htmlId={null}
    id="1"
    inputAfter={null}
    inputBefore={
      <Icon
        append={false}
        ariaLabel={null}
        buttonClassName=""
        buttonProps={null}
        className=""
        color=""
        description=""
        name="search_20"
        onClick={null}
        prepend={false}
        size={null}
        sizeOverride={false}
        style={null}
        title=""
        type=""
      />
    }
    inputClassName=""
    inputRef={null}
    inputSize=""
    isFilled={false}
    label=""
    messageArr={[]}
    multiline={false}
    name="test"
    nestedLevel={0}
    onChange={null}
    onDoneEditing={null}
    onFocus={null}
    onKeyDown={null}
    onMouseDown={null}
    placeholder=""
    readOnly={false}
    secondaryLabel=""
    shape=""
    type="text"
    value=""
  >
    <div
      className="md-input-container"
    >
      <div
        className="md-input__wrapper"
      >
        <InputSection
          className=""
          position="before"
        >
          <span
            className="md-input__before"
          >
            <Icon
              append={false}
              ariaLabel={null}
              buttonClassName=""
              buttonProps={null}
              className=""
              color=""
              description=""
              name="search_20"
              onClick={null}
              prepend={false}
              size={null}
              sizeOverride={false}
              style={null}
              title=""
              type=""
            >
              <i
                aria-label={null}
                className="md-icon icon icon-search_20"
                style={
                  {
                    "fontSize": 20,
                  }
                }
              />
            </Icon>
          </span>
        </InputSection>
        <input
          className="md-input md-input--before"
          id="1"
          name="test"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
    </div>
  </Input>
</SearchInput>
`;

exports[`tests for <InputSearch /> should match pill SnapShot 1`] = `
<SearchInput
  id="1"
  isLoading={false}
  name="test"
  shape="pill"
>
  <Input
    ariaDescribedBy={null}
    ariaLabel={null}
    className=""
    clear={false}
    clearAriaLabel={null}
    containerSize=""
    defaultValue=""
    disabled={false}
    helpText=""
    htmlId={null}
    id="1"
    inputAfter={null}
    inputBefore={
      <Icon
        append={false}
        ariaLabel={null}
        buttonClassName=""
        buttonProps={null}
        className=""
        color=""
        description=""
        name="search_20"
        onClick={null}
        prepend={false}
        size={null}
        sizeOverride={false}
        style={null}
        title=""
        type=""
      />
    }
    inputClassName=""
    inputRef={null}
    inputSize=""
    isFilled={false}
    label=""
    messageArr={[]}
    multiline={false}
    name="test"
    nestedLevel={0}
    onChange={null}
    onDoneEditing={null}
    onFocus={null}
    onKeyDown={null}
    onMouseDown={null}
    placeholder=""
    readOnly={false}
    secondaryLabel=""
    shape="pill"
    type="text"
    value=""
  >
    <div
      className="md-input-container"
    >
      <div
        className="md-input__wrapper"
      >
        <InputSection
          className=""
          position="before"
        >
          <span
            className="md-input__before"
          >
            <Icon
              append={false}
              ariaLabel={null}
              buttonClassName=""
              buttonProps={null}
              className=""
              color=""
              description=""
              name="search_20"
              onClick={null}
              prepend={false}
              size={null}
              sizeOverride={false}
              style={null}
              title=""
              type=""
            >
              <i
                aria-label={null}
                className="md-icon icon icon-search_20"
                style={
                  {
                    "fontSize": 20,
                  }
                }
              />
            </Icon>
          </span>
        </InputSection>
        <input
          className="md-input md-input--pill md-input--before"
          id="1"
          name="test"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
    </div>
  </Input>
</SearchInput>
`;
